--- a/dcos2.ipynb
+++ b/dcos2.ipynb
@@ -137,7 +137,7 @@
     "import numpy as np\n",
     "import pandas as pd\n",
     "\n",
-    "x_train,y_test ,y_train,y_text = train_test_split(x,y,test_size=0.2,random_state =42)\n",
+    "x_train,x_test ,y_train,y_text = train_test_split(x,y,test_size=0.2,random_state =42)\n",
     "\n",
     "model = LinearRegression()\n",
     "model.fit(x_train,y_train)\n",
